--- a/frontend/packages/console-app/locales/en/console-app.json
+++ b/frontend/packages/console-app/locales/en/console-app.json
@@ -2,6 +2,8 @@
   "Administrator": "Administrator",
   "VolumeSnapshotContents": "VolumeSnapshotContents",
   "General": "General",
+  "Projects": "Projects",
+  "Developer": "Developer",
   "Language": "Language",
   "Notifications": "Notifications",
   "Applications": "Applications",
@@ -34,7 +36,6 @@
   "Administration": "Administration",
   "Observe": "Observe",
   "Overview": "Overview",
-  "Projects": "Projects",
   "Search": "Search",
   "API Explorer": "API Explorer",
   "Events": "Events",
@@ -226,6 +227,8 @@
   "This Project will be used to initialize your command line terminal": "This Project will be used to initialize your command line terminal",
   "Project name": "Project name",
   "Connecting to your OpenShift command line terminal ...": "Connecting to your OpenShift command line terminal ...",
+  "Cluster configuration": "Cluster configuration",
+  "{{section}} not found": "{{section}} not found",
   "Enabled": "Enabled",
   "Disabled": "Disabled",
   "Name": "Name",
@@ -234,6 +237,7 @@
   "Console plugins table": "Console plugins table",
   "console plugins": "console plugins",
   "Console plugins": "Console plugins",
+  "Customize": "Customize",
   "Updating cluster to {{version}}": "Updating cluster to {{version}}",
   "API Servers": "API Servers",
   "Controller Managers": "Controller Managers",
