--- a/frontend/packages/helm-plugin/locales/en/helm-plugin.json
+++ b/frontend/packages/helm-plugin/locales/en/helm-plugin.json
@@ -108,6 +108,7 @@
   "The Helm Chart is currently unavailable. {{chartError}}": "The Helm Chart is currently unavailable. {{chartError}}",
   "Release name": "Release name",
   "A unique name for the Helm Chart release.": "A unique name for the Helm Chart release.",
+  "Helm release is not configurable since the Helm Chart doesn't define any values.": "Helm release is not configurable since the Helm Chart doesn't define any values.",
   "Errors in the form - {{errorsText}}": "Errors in the form - {{errorsText}}",
   "Select the version to rollback <1>{{releaseName}}</1> to, from the table below:": "Select the version to rollback <1>{{releaseName}}</1> to, from the table below:",
   "CustomResources": "CustomResources",
