--- a/frontend/packages/pipelines-plugin/locales/en/pipelines-plugin.json
+++ b/frontend/packages/pipelines-plugin/locales/en/pipelines-plugin.json
@@ -127,6 +127,8 @@
   "High": "High",
   "Medium": "Medium",
   "Low": "Low",
+  "Resource is being deleted.": "Resource is being deleted.",
+  "Resource is being fetched from Tekton Results.": "Resource is being fetched from Tekton Results.",
   "View GitHub App": "View GitHub App",
   "EventListener details": "EventListener details",
   "URL": "URL",
@@ -448,6 +450,8 @@
   "Invalid PipelineRun configuration, unable to start Pipeline.": "Invalid PipelineRun configuration, unable to start Pipeline.",
   "Edit Pipeline": "Edit Pipeline",
   "Start last run": "Start last run",
+  "This action will delete resource from k8s but still the resource can be fetched from Tekton Results": "This action will delete resource from k8s but still the resource can be fetched from Tekton Results",
+  "Delete {{kind}}": "Delete {{kind}}",
   "Stop": "Stop",
   "Let the running tasks complete, then execute finally tasks": "Let the running tasks complete, then execute finally tasks",
   "Interrupt any executing non finally tasks, then execute finally tasks": "Interrupt any executing non finally tasks, then execute finally tasks",
