add archive icon to the PLR and TR fetched from results database

--- a/frontend/packages/pipelines-plugin/locales/en/pipelines-plugin.json
+++ b/frontend/packages/pipelines-plugin/locales/en/pipelines-plugin.json
@@ -105,6 +105,7 @@
   "Task status": "Task status",
   "Started": "Started",
   "Signed": "Signed",
+  "Archived in Tekton results": "Archived in Tekton results",
   "Unknown failure condition": "Unknown failure condition",
   "Failure on task {{taskName}} - check logs for details.": "Failure on task {{taskName}} - check logs for details.",
   "Error downloading logs.": "Error downloading logs.",
